# document-converter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.sh
examples/: client_example.py
src/app/: main.py
src/app/api/v1/endpoints/: pdf.py
src/app/api/v2/endpoints/: pdf.py
src/app/core/: config.py  version.py
src/app/models/: pdf.py
src/app/services/: pdf_service.py  smoldocling_service.py
tests/: test_api.py  test_api_v2.py  test_pdf_service.py  test_smoldocling_service.py
