[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-converter"
version = "0.1.0"
description = "A FastAPI service that converts PDF files to text"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Document Converter Team"}
]
dependencies = [
    "fastapi>=0.115.11, <1.0.0",
    "uvicorn>=0.34.0, <1.0.0",
    "pypdf>=5.4.0, <6.0.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.0.0, <3.0.0",
    "pydantic-settings>=2.0.0, <3.0.0",
    "pytesseract>=0.3.13, <1.0.0",
    "pillow>=11.1.0, <12.0.0",
    "loguru>=0.7.0, <1.0.0",
    "transformers>=4.50.0, <5.0.0",
    "torch>=2.6.0, <3.0.0",
    "pdf2image>=1.17.0, <2.0.0",
]

[project.optional-dependencies]
dev = [
    "reportlab>=4.3.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "httpx>=0.28.1",
]
examples = [
    "requests>=2.32.3",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "B", "I"]
lint.ignore = []

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
